<resources>
    <!--<string name="app_name">PaymentApp</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_card">Add Card</string>
    <string name="none">none</string>
    <string name="bank_name">Card Type</string>
    <string name="hint_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="cardholder">CardHolder</string>
    <string name="save">Save</string>
    <string name="card_number_error">Card number can\'t be empty</string>
    <string name="card_holder_error">CardHolder name can\'t be empty</string>
    <string name="card_cvv_error">Card cvv can\'t be empty</string>
    <string name="card_expire_month_error">Expiry month can\'t be empty</string>
    <string name="card_expire_year_error">Expiry year can\'t be empty</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="make_payment">Make Payment</string>
    <string name="enter_cardholder_name">Enter CardHolder Name</string>
    <string name="cardholder_name">Card Holder Name</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="show_card">Show card</string>
    <string name="add">Add</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="digital">Digital</string>
    <string name="cards">CARDS</string>
    <string name="account_number">Account Number</string>
    <string name="edit_card">Edit Card</string>
    <string name="card_number">Card Number</string>
    <string name="update">Update</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="name">Name</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="pay_now">Pay Now</string>
</resources>