<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.stripe.AddCardFragment">

        <TextView
            android:id="@+id/tvCardDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_card_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvCardHolderNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/enter_cardholder_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardDetails" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardHolderNameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundMode="none"
            app:layout_constraintStart_toStartOf="@id/tvCardHolderNameText"
            app:layout_constraintTop_toBottomOf="@id/tvCardHolderNameText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardHolderNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapWords"
                android:autofillHints="false"
                android:hint="@string/cardholder_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvCardNumberText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/enter_card_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardHolderNameTIL" />

        <com.stripe.android.view.CardMultilineWidget
            android:id="@+id/cardInputWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shouldShowPostalCode="false"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvCardNumberText"
            app:layout_constraintStart_toStartOf="parent">

        </com.stripe.android.view.CardMultilineWidget>

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/cardInputWidget">
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/add" />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/darkBlue"/>
        </ViewFlipper>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>