<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.razorpay.RazorPayPaymentsActivity">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_pay"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/tealColor"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="@color/hintColor"
        app:hintTextColor="@color/lightTealColor"
        app:boxStrokeColor="@color/tealColor"
        app:boxStrokeWidth="1dp"
        android:layout_marginTop="35dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintTop_toBottomOf="@id/titleTv">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightTealColor"
            android:hint="@string/enter_amount"
            android:textColorHint="@android:color/darker_gray"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/payNowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="25dp"
        android:enabled="false"
        android:backgroundTint="@color/lightTealColor"
        android:text="@string/pay_now"
        app:layout_constraintTop_toBottomOf="@id/amountTIL"/>
    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/payNowBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>